--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
 GOOGLE_GEMINI_KEY=AIzaSyDLZy3fxrtCyCFi-mpt3eOD6lrljlqBYJE
+VITE_API_BASE_URL=http://localhost:3000
+VITE_API_BASE_URL=https://your-backend-service.onrender.com
+
