--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 GOOGLE_GEMINI_KEY=AIzaSyDLZy3fxrtCyCFi-mpt3eOD6lrljlqBYJE
 VITE_API_BASE_URL=http://localhost:3000
-VITE_API_BASE_URL=https://your-backend-service.onrender.com
+VITE_API_BASE_URL=https://ai-code-reviewer-backend-1rdn.onrender.com
 
